# efl-egueb

./: Makefile.am  README.md  TODO  configure.ac  efl-egueb.pc.in  efl_svg.pc.in
data/: Makefile.am  Makefile.mk  efl_svg.edc  efl_svg.edc.in
src/: Makefile.am
src/include/: Efl_Svg_Smart.h  Makefile.am
src/lib/: Efl_Egueb.h  Efl_Egueb_Win32.h  Efl_Egueb_Window_X.h  Efl_Egueb_X.h  Efl_Svg.h  Efl_Svg_Smart.h  Efl_Svg_Window_X.h  Makefile.am  Makefile.mk  efl_egueb_build.h  efl_egueb_document.c  efl_egueb_document_private.h  efl_egueb_io_request.c  efl_egueb_io_request_private.h  efl_egueb_main.c  efl_egueb_main.h  efl_egueb_private.h  efl_egueb_smart.c  efl_egueb_smart.h  efl_egueb_smart_svg.c  efl_egueb_window.c  efl_egueb_window.h  efl_egueb_window_private.h  efl_egueb_window_win32.c  efl_egueb_window_win32.h  efl_egueb_window_x.c  efl_egueb_window_x.h  efl_svg_build.h  efl_svg_main.c  efl_svg_main.h  efl_svg_private.h  efl_svg_smart.c  efl_svg_smart.h  efl_svg_window.c  efl_svg_window.h  efl_svg_window_private.h  efl_svg_window_x.c
src/modules/: Makefile.am  Makefile.mk  efl_egueb_edje_external.c  efl_svg_edje_external.c
